docs: remove duplication of container, fix z-index

--- a/docs/assets/elements/uxdot-masthead-lightdom.css
+++ b/docs/assets/elements/uxdot-masthead-lightdom.css
@@ -2,6 +2,7 @@
 uxdot-masthead {
   container-type: inline-size;
   container-name: masthead;
+  z-index: 3;
 }
 
 uxdot-masthead a[slot="logo"] > img {
