--- a/docs/styles/styles.css
+++ b/docs/styles/styles.css
@@ -51,6 +51,8 @@
       var(--rh-border-width-sm, 1px)
       solid
       var(--rh-color-border-subtle-on-light, #c7c7c7);
+    container-type: inline-size;
+    container-name: main;
   }
 
   .container {
@@ -105,17 +107,20 @@
 @layer patterns {
   /**
    * Patterns layer for defining component and site patterns
-  */
+   **/
 
-  /* Sticky header pattern */
-  uxdot-header {
+  /**
+   * Sticky header pattern
+   * progressive enhancement sticky, using :has()
+   **/
+  uxdot-header:has(rh-subnav) {
     position: sticky;
-    top: -56px;
+    top: -54px;
     z-index: 2;
   }
 
   @container main (min-width: 992px) {
-    uxdot-header {
+    uxdot-header:has(rh-subnav) {
       top: -100px;
     }
   }
